--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <title></title>
     <script src="Scripts/bootstrap.js"> </script>
    <link type="text/css" rel="stylesheet" href="Content/bootstrap.css"/>
+    <link type="text/css" rel="stylesheet" href="Content/Site.css" />
 	<meta charset="utf-8" />
 </head>
 <body>
