--- a/index.html
+++ b/index.html
@@ -1,40 +1,64 @@
 ﻿<!DOCTYPE html>
-<html>
+<html data-bs-theme="dark">
+
 <head>
-    <title></title>
-    <script src="Scripts/bootstrap.js"> </script>
-   <link type="text/css" rel="stylesheet" href="Content/bootstrap.css"/>
-    <link type="text/css" rel="stylesheet" href="Content/Site.css" />
+    <title>Neil Gannon</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1, , shrink-to-fit=no"/>
+    <script src="js/bootstrap.bundle.js"> </script>
+    <link type="text/css" rel="stylesheet" href="css/bootstrap.min.css"/>
 	<meta charset="utf-8" />
 </head>
+
 <body>
-    <div class="jumbotron">
-        <h1>Testing</h1>
-        <p class="lead">This is a simple test</p>
+    <div class="jumbotron jumbotron-fluid">
+        <div class="container">
+        <h1 class="display-4">Neil Gannon</h1>
+        <p class="lead" class="lead">ATU Sligo</p>
+        <p class="lead" class="lead">Games Development Lecturer</p>
+    </div>
     </div>
 
     <div class="row">
-        <div class="col-md-4">
-            <h2>Sample 1</h2>
-            <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut non justo sapien. Interdum et malesuada fames ac ante ipsum primis in faucibus. Donec volutpat orci felis, ullamcorper mollis enim rutrum non. Vivamus euismod, diam id rutrum mollis, leo nibh pretium ipsum, eget pellentesque nisi augue id massa. Suspendisse potenti. Aenean pellentesque nulla blandit iaculis lacinia. Phasellus bibendum nec nunc vel sollicitudin. Phasellus fermentum dictum nisi faucibus luctus. Nulla accumsan mollis sagittis.
-            </p>
-            <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
+        <div class="col-sm-6">
+            <div class="card text-white bg-dark mb-3">
+                <img src="Content/Images/SampleProject1Thumnail.png" class="card-img-top"/>
+                <div class="card-body">
+                    <h3 class="card-title">First Person Shooter</h3>
+                    <h4 class="card-title">Unreal Engine 5</h4>
+                    <p class="card-text">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut non justo sapien. Interdum et malesuada fames ac ante ipsum primis in faucibus. Donec volutpat orci felis, ullamcorper mollis enim rutrum non. Vivamus euismod, diam id rutrum mollis, leo nibh pretium ipsum, eget pellentesque nisi augue id massa. Suspendisse potenti. Aenean pellentesque nulla blandit iaculis lacinia. Phasellus bibendum nec nunc vel sollicitudin. Phasellus fermentum dictum nisi faucibus luctus. Nulla accumsan mollis sagittis.
+                    </p>
+                        <a class="btn btn-primary" href="https://github.com/neilgannon/GitHubSampleFPS">Go to repository &raquo;</a>
+                </div>
+            </div>
         </div>
-        <div class="col-md-4">
-            <h2>Sample 2</h2>
-            <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut non justo sapien. Interdum et malesuada fames ac ante ipsum primis in faucibus. Donec volutpat orci felis, ullamcorper mollis enim rutrum non. Vivamus euismod, diam id rutrum mollis, leo nibh pretium ipsum, eget pellentesque nisi augue id massa. Suspendisse potenti. Aenean pellentesque nulla blandit iaculis lacinia. Phasellus bibendum nec nunc vel sollicitudin. Phasellus fermentum dictum nisi faucibus luctus. Nulla accumsan mollis sagittis.
-            </p>            <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
+
+        <div class="col-sm-6">
+            <div class="card text-white bg-dark mb-3">
+                <video class="card-img-top"src="Content/Video/tps_sample.mp4" autoplay="" muted="" loop="" type="video/mp4"></video>
+                <div class="card-body">
+                    <h3 class="card-title">Third Person Shooter</h3>
+                    <h4 class="card-title">Unreal Engine 5</h4>
+                    <p class="card-text">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut non justo sapien. Interdum et malesuada fames ac ante ipsum primis in faucibus. Donec volutpat orci felis, ullamcorper mollis enim rutrum non. Vivamus euismod, diam id rutrum mollis, leo nibh pretium ipsum, eget pellentesque nisi augue id massa. Suspendisse potenti. Aenean pellentesque nulla blandit iaculis lacinia. Phasellus bibendum nec nunc vel sollicitudin. Phasellus fermentum dictum nisi faucibus luctus. Nulla accumsan mollis sagittis.
+                    </p>
+                        <a class="btn btn-primary" href="https://github.com/neilgannon/GitHubSampleTPS">Go to repository &raquo;</a>
+                </div>
+            </div>
         </div>
-        <div class="col-md-4">
-            <h2>Sample 3</h2>
-            <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut non justo sapien. Interdum et malesuada fames ac ante ipsum primis in faucibus. Donec volutpat orci felis, ullamcorper mollis enim rutrum non. Vivamus euismod, diam id rutrum mollis, leo nibh pretium ipsum, eget pellentesque nisi augue id massa. Suspendisse potenti. Aenean pellentesque nulla blandit iaculis lacinia. Phasellus bibendum nec nunc vel sollicitudin. Phasellus fermentum dictum nisi faucibus luctus. Nulla accumsan mollis sagittis.
-            </p>
-                        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
+
+        <div class="col-sm-6">
+            <div class="card text-white bg-dark mb-3">
+                <img src="Content/Images/SampleProject1Thumnail.png" class="card-img-top"/>
+                <div class="card-body">
+                    <h3 class="card-title">Sample 3</h3>
+                    <p class="card-text">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut non justo sapien. Interdum et malesuada fames ac ante ipsum primis in faucibus. Donec volutpat orci felis, ullamcorper mollis enim rutrum non. Vivamus euismod, diam id rutrum mollis, leo nibh pretium ipsum, eget pellentesque nisi augue id massa. Suspendisse potenti. Aenean pellentesque nulla blandit iaculis lacinia. Phasellus bibendum nec nunc vel sollicitudin. Phasellus fermentum dictum nisi faucibus luctus. Nulla accumsan mollis sagittis.
+                    </p>
+                        <a class="btn btn-primary" href="https://github.com/neilgannon/GitHubSampleFPS">Sample 3 Repository &raquo;</a>
+                </div>
+            </div>
         </div>
     </div>
-
 </body>
 </html>
