--- a/index.html
+++ b/index.html
@@ -1,24 +1,26 @@
 
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html data-bs-theme="dark">
 <head>
     <title>Neil Gannon</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, , shrink-to-fit=no"/>
     <script src="js/bootstrap.bundle.js"> </script>
     <link type="text/css" rel="stylesheet" href="css/bootstrap.min.css"/>
+    <link type="text/css" rel="stylesheet" href="css/custom.css"/>
 	<meta charset="utf-8" />
 </head>
 
 <body>
     <div class="jumbotron jumbotron-fluid">
-        <div class="container">
+        <div class=".container">
         <h1 class="display-4">Neil Gannon</h1>
         <p class="lead" class="lead">ATU Sligo</p>
         <p class="lead" class="lead">Games Development Lecturer</p>
+        <a type="button" class="btn btn-light" href="mailto:some@email.com">Contact Me</a>
     </div>
     </div>
 
-    <div class="row">
+    <div class="row top-buffer">
         <div class="col-sm-6">
             <div class="card text-white bg-dark mb-3">
                 <img src="Content/Images/SampleProject1Thumnail.png" class="card-img-top"/>
@@ -49,16 +51,31 @@
 
         <div class="col-sm-6">
             <div class="card text-white bg-dark mb-3">
-                <img src="Content/Images/SampleProject1Thumnail.png" class="card-img-top"/>
+                <video class="card-img-top"src="Content/Video/fair_sample.mp4" autoplay="" muted="" loop="" type="video/mp4"></video>
                 <div class="card-body">
-                    <h3 class="card-title">Sample 3</h3>
+                    <h3 class="card-title">Engineering Fair 2023</h3>
+                    <h4 class="card-title">Unity</h4>
                     <p class="card-text">
                         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut non justo sapien. Interdum et malesuada fames ac ante ipsum primis in faucibus. Donec volutpat orci felis, ullamcorper mollis enim rutrum non. Vivamus euismod, diam id rutrum mollis, leo nibh pretium ipsum, eget pellentesque nisi augue id massa. Suspendisse potenti. Aenean pellentesque nulla blandit iaculis lacinia. Phasellus bibendum nec nunc vel sollicitudin. Phasellus fermentum dictum nisi faucibus luctus. Nulla accumsan mollis sagittis.
                     </p>
-                        <a class="btn btn-primary" href="https://github.com/neilgannon/GitHubSampleFPS">Sample 3 Repository &raquo;</a>
+                        <a class="btn btn-primary" href="https://github.com/neilgannon/EngineeringFair2023">Go to repository &raquo;</a>
                 </div>
             </div>
         </div>
+
+            <div class="col-sm-6">
+                <div class="card text-white bg-dark mb-3">
+                    <img src="Content/Images/cpp_sample.png" class="card-img-top"/>
+                    <div class="card-body">
+                        <h3 class="card-title">C++ Open World</h3>
+                        <h4 class="card-title">Unreal Engine 5</h4>
+                        <p class="card-text">
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut non justo sapien. Interdum et malesuada fames ac ante ipsum primis in faucibus. Donec volutpat orci felis, ullamcorper mollis enim rutrum non. Vivamus euismod, diam id rutrum mollis, leo nibh pretium ipsum, eget pellentesque nisi augue id massa. Suspendisse potenti. Aenean pellentesque nulla blandit iaculis lacinia. Phasellus bibendum nec nunc vel sollicitudin. Phasellus fermentum dictum nisi faucibus luctus. Nulla accumsan mollis sagittis.
+                        </p>
+                            <a class="btn btn-primary" href="https://github.com/neilgannon/GitHubSampleCPP">Go to repository &raquo;</a>
+                    </div>
+                </div>
+                </div>
     </div>
 </body>
 </html>
