--- a/index.html
+++ b/index.html
@@ -12,8 +12,6 @@
 
 <body>
     <div class="row top-buffer">
-        <div class="col d-flex justify-content-center">
-        <div class="col-sm-6">
             <div class="card text-white bg-dark mb-3">
                 <img src="Content/Images/profile.png" class="mx-auto rounded-circle" style="width: 18rem;"/>
                 <div class="card-body">
@@ -25,8 +23,6 @@
                     <a type="button" class="btn btn-light" href="mailto:some@email.com">Contact Me</a>
                 </div>
             </div>
-        </div>
-    </div>
     </div>
 
     <div class="row top-buffer">
@@ -68,6 +64,7 @@
                         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut non justo sapien. Interdum et malesuada fames ac ante ipsum primis in faucibus. Donec volutpat orci felis, ullamcorper mollis enim rutrum non. Vivamus euismod, diam id rutrum mollis, leo nibh pretium ipsum, eget pellentesque nisi augue id massa. Suspendisse potenti. Aenean pellentesque nulla blandit iaculis lacinia. Phasellus bibendum nec nunc vel sollicitudin. Phasellus fermentum dictum nisi faucibus luctus. Nulla accumsan mollis sagittis.
                     </p>
                         <a class="btn btn-primary" href="https://github.com/neilgannon/EngineeringFair2023">Go to repository &raquo;</a>
+                        <button type="button" class="btn btn-success" href="/Content/Games/EngineeringFair/index.html">Play in browser</button>
                 </div>
             </div>
         </div>
