--- a/Content/Games/EngineeringFair/index.html
+++ b/Content/Games/EngineeringFair/index.html
@@ -27,9 +27,9 @@
       const buildUrl = "Build";
       const loaderUrl = buildUrl + "/EngineeringFair.loader.js";
       const config = {
-        dataUrl: buildUrl + "/EngineeringFair.data.br",
-        frameworkUrl: buildUrl + "/EngineeringFair.framework.js.br",
-        codeUrl: buildUrl + "/EngineeringFair.wasm.br",
+        dataUrl: buildUrl + "/EngineeringFair.data",
+        frameworkUrl: buildUrl + "/EngineeringFair.framework.js",
+        codeUrl: buildUrl + "/EngineeringFair.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "Neil Gannon",
         productName: "Engineering Fair",
