--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut non justo sapien. Interdum et malesuada fames ac ante ipsum primis in faucibus. Donec volutpat orci felis, ullamcorper mollis enim rutrum non. Vivamus euismod, diam id rutrum mollis, leo nibh pretium ipsum, eget pellentesque nisi augue id massa. Suspendisse potenti. Aenean pellentesque nulla blandit iaculis lacinia. Phasellus bibendum nec nunc vel sollicitudin. Phasellus fermentum dictum nisi faucibus luctus. Nulla accumsan mollis sagittis.
                     </p>
                         <a class="btn btn-primary" href="https://github.com/neilgannon/EngineeringFair2023">Go to repository &raquo;</a>
-                        <button type="button" class="btn btn-success" href="https://neilgannon.github.io/Content/Games/EngineeringFair/index.html">Play in browser</button>
+                        <a type="button" class="btn btn-success" href="https://neilgannon.github.io/Content/Games/EngineeringFair/index.html">Play in browser</a>
                 </div>
             </div>
         </div>
