--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
     <div class="row top-buffer">
-            <div class="card text-white bg-dark mb-3">
+            <div class="card text-white bg-secondary mb-3">
                 <img src="Content/Images/profile.png" class="mx-auto rounded-circle" style="width: 18rem;"/>
                 <div class="card-body">
                     <h3 class="card-title">Neil Gannon</h3>
@@ -32,6 +32,8 @@
                 <div class="card-body">
                     <h3 class="card-title">First Person Shooter</h3>
                     <h4 class="card-title">Unreal Engine 5</h4>
+                    <span class="badge bg-info text-dark">C++</span>
+                    <span class="badge bg-info text-dark">Blueprints</span>
                     <p class="card-text">
                         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut non justo sapien. Interdum et malesuada fames ac ante ipsum primis in faucibus. Donec volutpat orci felis, ullamcorper mollis enim rutrum non. Vivamus euismod, diam id rutrum mollis, leo nibh pretium ipsum, eget pellentesque nisi augue id massa. Suspendisse potenti. Aenean pellentesque nulla blandit iaculis lacinia. Phasellus bibendum nec nunc vel sollicitudin. Phasellus fermentum dictum nisi faucibus luctus. Nulla accumsan mollis sagittis.
                     </p>
@@ -46,6 +48,8 @@
                 <div class="card-body">
                     <h3 class="card-title">Third Person Shooter</h3>
                     <h4 class="card-title">Unreal Engine 5</h4>
+                    <span class="badge bg-info text-dark">C++</span>
+                    <span class="badge bg-info text-dark">Blueprints</span>
                     <p class="card-text">
                         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut non justo sapien. Interdum et malesuada fames ac ante ipsum primis in faucibus. Donec volutpat orci felis, ullamcorper mollis enim rutrum non. Vivamus euismod, diam id rutrum mollis, leo nibh pretium ipsum, eget pellentesque nisi augue id massa. Suspendisse potenti. Aenean pellentesque nulla blandit iaculis lacinia. Phasellus bibendum nec nunc vel sollicitudin. Phasellus fermentum dictum nisi faucibus luctus. Nulla accumsan mollis sagittis.
                     </p>
@@ -60,6 +64,8 @@
                 <div class="card-body">
                     <h3 class="card-title">Engineering Fair 2023</h3>
                     <h4 class="card-title">Unity</h4>
+                    <span class="badge bg-info text-dark">C#</span>
+                    <span class="badge bg-info text-dark">WebGL</span>
                     <p class="card-text">
                         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut non justo sapien. Interdum et malesuada fames ac ante ipsum primis in faucibus. Donec volutpat orci felis, ullamcorper mollis enim rutrum non. Vivamus euismod, diam id rutrum mollis, leo nibh pretium ipsum, eget pellentesque nisi augue id massa. Suspendisse potenti. Aenean pellentesque nulla blandit iaculis lacinia. Phasellus bibendum nec nunc vel sollicitudin. Phasellus fermentum dictum nisi faucibus luctus. Nulla accumsan mollis sagittis.
                     </p>
@@ -71,10 +77,20 @@
 
             <div class="col-sm-6">
                 <div class="card text-white bg-dark mb-3">
-                    <img src="Content/Images/cpp_sample.png" class="card-img-top"/>
+                    <div class="card-img-top carousel slide" data-bs-ride="carousel">
+                        <div class="carousel-inner">
+                          <div class="carousel-item active">
+                            <img src="Content/Images/cpp_sample.png" class="d-block w-100">
+                          </div>
+                          <div class="carousel-item">
+                            <img src="Content/Images/cpp_sample_2.png" class="d-block w-100">
+                          </div>
+                        </div>
+                      </div>
                     <div class="card-body">
                         <h3 class="card-title">C++ Open World</h3>
                         <h4 class="card-title">Unreal Engine 5</h4>
+                        <span class="badge bg-info text-dark">C++</span>
                         <p class="card-text">
                             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut non justo sapien. Interdum et malesuada fames ac ante ipsum primis in faucibus. Donec volutpat orci felis, ullamcorper mollis enim rutrum non. Vivamus euismod, diam id rutrum mollis, leo nibh pretium ipsum, eget pellentesque nisi augue id massa. Suspendisse potenti. Aenean pellentesque nulla blandit iaculis lacinia. Phasellus bibendum nec nunc vel sollicitudin. Phasellus fermentum dictum nisi faucibus luctus. Nulla accumsan mollis sagittis.
                         </p>
